src/objects/EngagementContactFieldSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Type__c</fullName>
        <inlineHelpText>for now, only &quot;checkbox&quot; is supported</inlineHelpText>
        <label>Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>for non-checkbox, fields the value that the field must have to qualify.  Note, enter an asterisk (*) to require any non-empty value</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldname__c</fullName>
        <label>Fieldname</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Value__c</fullName>
        <inlineHelpText>the level earned by this field - for checkboxes, the level earned if it&apos;s checked</inlineHelpText>
        <label>Level Value</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Contact Field Settings</label>
</CustomObject>